--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.5.0",
-    "mongoose": "8.3.1"
+    "mongoose": "8.3.1",
+    "nanoid": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^24.7.2"
