ipinfo api integrated, migration on analytics

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,7 @@ SITE_URL=http://localhost:
 MONGO_URL=mongodb+srv://<username>:<password>@cluster.mongodb.net
 
 ACCESS_TOKEN_SECRET=your_access_secret
-ACCESS_TOKEN_EXPIRY=20d
+ACCESS_TOKEN_EXPIRY=14m
 
 REFRESH_TOKEN_SECRET=your_refresh_secret
 REFRESH_TOKEN_EXPIRY=7d
