--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.5.0",
     "mongoose": "8.3.1",
-    "nanoid": "^5.1.6"
+    "nanoid": "^5.1.6",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^24.7.2"
